<resources>
    <string name="app_name">Tour Guatemala</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="titulo_1">Sitios Principales</string>
    <string name="titulo_2">General</string>
    <string name="titulo_3">Transporte</string>
    <string name="ajustes">Ajustes</string>
    <string name="ayuda_asistencia">Ayuda y asistencia</string>
    <string name="primeros_pasos">Primeros pasos</string>
    <string name="creditos">Creditos</string>
    <string name="terminos_condiciones">terminos y condiciones</string>
    <string name="otras_opciones">otras opciones</string>
</resources>
